--- a/Flames/Flames.csproj
+++ b/Flames/Flames.csproj
@@ -359,6 +359,7 @@
     <Compile Include="CorePlugin\EcoHandlers.cs" />
     <Compile Include="CorePlugin\MiscHandlers.cs" />
     <Compile Include="CorePlugin\ModActionHandler.cs" />
+    <Compile Include="CorePlugin\SimplePluginLoader.cs" />
     <Compile Include="Database\Backends\Interfaces.cs" />
     <Compile Include="Database\Backends\SQLite.cs" />
     <Compile Include="Database\Backends\SQLiteBackend.cs" />
