--- a/Flames/Flames.csproj
+++ b/Flames/Flames.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Commands\Added\CmdCCBeat.cs" />
     <Compile Include="Commands\Added\CmdDisconnect.cs" />
     <Compile Include="Commands\Added\CmdDiscordSay.cs" />
+    <Compile Include="Commands\Added\CmdHarmony.cs" />
     <Compile Include="Commands\Added\CmdQuack.cs" />
     <Compile Include="Commands\Added\CmdShutdownTrue.cs" />
     <Compile Include="Commands\Alias.cs" />
@@ -246,6 +247,7 @@
     <Compile Include="Commands\Information\CmdWhoNick.cs" />
     <Compile Include="Commands\Maintenance\CmdBlockDB.cs" />
     <Compile Include="Commands\Maintenance\CmdBlockSpeed.cs" />
+    <Compile Include="Commands\Maintenance\CmdEnd.cs" />
     <Compile Include="Commands\Maintenance\CmdInfoSwap.cs" />
     <Compile Include="Commands\Maintenance\CmdLimit.cs" />
     <Compile Include="Commands\Maintenance\CmdLowlag.cs" />
