--- a/Flames/Flames.csproj
+++ b/Flames/Flames.csproj
@@ -100,8 +100,7 @@
     <Compile Include="Commands\Added\CmdCCBeat.cs" />
     <Compile Include="Commands\Added\CmdDisconnect.cs" />
     <Compile Include="Commands\Added\CmdDiscordSay.cs" />
-    <Compile Include="Commands\Added\CmdOldHarmony.cs" />
-    <Compile Include="Commands\Added\CmdHarmony.cs" />
+    <Compile Include="Commands\Added\CmdLogo.cs" />
     <Compile Include="Commands\Added\CmdQuack.cs" />
     <Compile Include="Commands\Added\CmdShutdownTrue.cs" />
     <Compile Include="Commands\Alias.cs" />
@@ -716,9 +715,6 @@
     <Compile Include="1.9.3.9\Scripting\Plugin_simple\Scripting_Simple.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\LICENSE.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="..\sqlite3_x32.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
