--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Flames/Server/Maintenance/UpdatePlugin.cs
+/Flames/Commands/Added/Test.cs
