--- a/Flames/Flames.csproj
+++ b/Flames/Flames.csproj
@@ -350,8 +350,9 @@
     <Compile Include="Commands\World\CmdUnload.cs" />
     <Compile Include="Commands\World\PermissionCmds.cs" />
     <Compile Include="Config\ConfigAttribute.cs" />
+    <Compile Include="Config\UnsignedNumberAttributes.cs" />
     <Compile Include="Config\JSON.cs" />
-    <Compile Include="Config\NumberAttributes.cs" />
+    <Compile Include="Config\SignedNumberAttributes.cs" />
     <Compile Include="Config\OtherAttributes.cs" />
     <Compile Include="Config\ConfigElement.cs" />
     <Compile Include="Config\Permissions\BlockPerms.cs" />
