--- a/Flames/Flames.csproj
+++ b/Flames/Flames.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Serialization" />
+    <Reference Include="System.IO.Compression.FileSystem" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="1.9.3.9\MultiPageOutput.cs" />
